// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`01 §2.4 + 06 §8.6.4: what lies ahead is a band, never a line > a fresh day draws the forecast alone 1`] = `
{
  "areas": [],
  "blocks": [],
  "caption": {
    "text": "DOBA · POPYT vs POKRYCIE [MW]",
    "x": 8,
    "y": 14,
  },
  "currentBlock": {
    "width": 132.5,
    "x": 0,
  },
  "demandLine": "",
  "forecast": {
    "band": "0,76 44.2,81.6 88.3,84.4 132.5,84.7 176.7,82.4 220.8,76.1 265,64.8 309.2,52.9 353.3,46.1 397.5,46.9 441.7,44.7 485.8,44.9 530,45.9 574.2,45.8 618.3,46.9 662.5,49.3 706.7,43.7 750.8,38.8 795,35.4 839.2,36.4 883.3,44.2 927.5,53.4 971.7,65.4 1015.8,70.9 1060,70.9 1060,82.3 1015.8,82.3 971.7,76.8 927.5,64.9 883.3,55.6 839.2,47.8 795,46.8 750.8,50.2 706.7,55.1 662.5,60.7 618.3,58.4 574.2,57.2 530,57.3 485.8,56.3 441.7,55.4 397.5,56.8 353.3,55.2 309.2,61.2 265,72.3 220.8,82.8 176.7,88.3 132.5,89.8 88.3,88.8 44.2,85.1 0,78.7",
    "mid": "0,77.3 44.2,83.3 88.3,86.6 132.5,87.3 176.7,85.3 220.8,79.5 265,68.6 309.2,57 353.3,50.7 397.5,51.9 441.7,50 485.8,50.6 530,51.6 574.2,51.5 618.3,52.7 662.5,55 706.7,49.4 750.8,44.5 795,41.1 839.2,42.1 883.3,49.9 927.5,59.2 971.7,71.1 1015.8,76.6 1060,76.6",
  },
  "gridX": [
    132.5,
    265,
    397.5,
    530,
    662.5,
    795,
    927.5,
  ],
  "height": 130,
  "legend": [
    {
      "color": "var(--en-nuclear)",
      "label": "JĄDROWA",
    },
    {
      "color": "var(--en-coal)",
      "label": "WĘGIEL",
    },
    {
      "color": "var(--en-gas)",
      "label": "GAZ",
    },
    {
      "color": "var(--en-wind)",
      "label": "WIATR",
    },
    {
      "color": "var(--en-pv)",
      "label": "PV",
    },
    {
      "color": "var(--en-ok)",
      "label": "MAGAZYN",
    },
    {
      "color": "var(--en-storage)",
      "label": "IMPORT",
    },
  ],
  "note": "— PRAWDA · ┄ PROGNOZA (PASMO)",
  "nowLabel": {
    "text": "TERAZ",
    "x": 6,
    "y": 28,
  },
  "nowX": 0,
  "scaleLabel": {
    "text": "100 MW",
    "x": 1052,
    "y": 14,
  },
  "scaleMw": 100,
  "width": 1060,
}
`;

exports[`01 §8 pt 2: coverage by technology, merit order from the bottom > model of the day's last turn 1`] = `
{
  "areas": [
    {
      "color": "var(--en-nuclear)",
      "key": "nuclear",
      "points": "0,117 132.5,117 132.5,117 265,117 265,117 397.5,117 397.5,117 530,117 530,117 662.5,117 662.5,117 795,117 795,117 927.5,117 927.5,130 795,130 795,130 662.5,130 662.5,130 530,130 530,130 397.5,130 397.5,130 265,130 265,130 132.5,130 132.5,130 0,130",
    },
    {
      "color": "var(--en-coal)",
      "key": "coal",
      "points": "0,107.5 132.5,107.5 132.5,109.1 265,109.1 265,104 397.5,104 397.5,104 530,104 530,104 662.5,104 662.5,104 795,104 795,104 927.5,104 927.5,117 795,117 795,117 662.5,117 662.5,117 530,117 530,117 397.5,117 397.5,117 265,117 265,117 132.5,117 132.5,117 0,117",
    },
    {
      "color": "var(--en-gas)",
      "key": "gas",
      "points": "0,107.5 132.5,107.5 132.5,109.1 265,109.1 265,91 397.5,91 397.5,91 530,91 530,91 662.5,91 662.5,91 795,91 795,91 927.5,91 927.5,104 795,104 795,104 662.5,104 662.5,104 530,104 530,104 397.5,104 397.5,104 265,104 265,109.1 132.5,109.1 132.5,107.5 0,107.5",
    },
    {
      "color": "var(--en-wind)",
      "key": "wind",
      "points": "0,91 132.5,91 132.5,90.6 265,90.6 265,76.6 397.5,76.6 397.5,85 530,85 530,79.4 662.5,79.4 662.5,73.8 795,73.8 795,66.1 927.5,66.1 927.5,91 795,91 795,91 662.5,91 662.5,91 530,91 530,91 397.5,91 397.5,91 265,91 265,109.1 132.5,109.1 132.5,107.5 0,107.5",
    },
    {
      "color": "var(--en-pv)",
      "key": "pv",
      "points": "0,91 132.5,91 132.5,90.6 265,90.6 265,76.4 397.5,76.4 397.5,80.7 530,80.7 530,75.3 662.5,75.3 662.5,73.6 795,73.6 795,66.1 927.5,66.1 927.5,66.1 795,66.1 795,73.8 662.5,73.8 662.5,79.4 530,79.4 530,85 397.5,85 397.5,76.6 265,76.6 265,90.6 132.5,90.6 132.5,91 0,91",
    },
    {
      "color": "var(--en-ok)",
      "key": "storage",
      "points": "0,78 132.5,78 132.5,77.6 265,77.6 265,63.4 397.5,63.4 397.5,67.7 530,67.7 530,62.3 662.5,62.3 662.5,60.6 795,60.6 795,53.1 927.5,53.1 927.5,66.1 795,66.1 795,73.6 662.5,73.6 662.5,75.3 530,75.3 530,80.7 397.5,80.7 397.5,76.4 265,76.4 265,90.6 132.5,90.6 132.5,91 0,91",
    },
    {
      "color": "var(--en-storage)",
      "key": "import",
      "points": "0,78 132.5,78 132.5,77.6 265,77.6 265,49.7 397.5,49.7 397.5,39.8 530,39.8 530,40.2 662.5,40.2 662.5,37.8 795,37.8 795,32.4 927.5,32.4 927.5,53.1 795,53.1 795,60.6 662.5,60.6 662.5,62.3 530,62.3 530,67.7 397.5,67.7 397.5,63.4 265,63.4 265,77.6 132.5,77.6 132.5,78 0,78",
    },
  ],
  "blocks": [
    {
      "coverageMw": 40.01,
      "demandMw": 38.9,
      "layersMw": [
        10,
        7.321,
        0,
        12.689,
        0,
        10,
        0,
      ],
      "turnIndex": 0,
    },
    {
      "coverageMw": 40.306,
      "demandMw": 39.2,
      "layersMw": [
        10,
        6.11,
        0,
        14.196,
        0,
        10,
        0,
      ],
      "turnIndex": 1,
    },
    {
      "coverageMw": 61.734,
      "demandMw": 60.167,
      "layersMw": [
        10,
        10,
        10,
        11.102,
        0.119,
        10,
        10.513,
      ],
      "turnIndex": 2,
    },
    {
      "coverageMw": 69.379,
      "demandMw": 67.8,
      "layersMw": [
        10,
        10,
        10,
        4.61,
        3.301,
        10,
        21.468,
      ],
      "turnIndex": 3,
    },
    {
      "coverageMw": 69.106,
      "demandMw": 67.467,
      "layersMw": [
        10,
        10,
        10,
        8.912,
        3.195,
        10,
        16.999,
      ],
      "turnIndex": 4,
    },
    {
      "coverageMw": 70.924,
      "demandMw": 69.233,
      "layersMw": [
        10,
        10,
        10,
        13.215,
        0.149,
        10,
        17.56,
      ],
      "turnIndex": 5,
    },
    {
      "coverageMw": 75.086,
      "demandMw": 73.267,
      "layersMw": [
        10,
        10,
        10,
        19.192,
        0,
        10,
        15.894,
      ],
      "turnIndex": 6,
    },
  ],
  "caption": {
    "text": "DOBA · POPYT vs POKRYCIE [MW]",
    "x": 8,
    "y": 14,
  },
  "currentBlock": {
    "width": 132.5,
    "x": 927.5,
  },
  "demandLine": "0,79.4 132.5,79.4 132.5,79 265,79 265,51.8 397.5,51.8 397.5,41.9 530,41.9 530,42.3 662.5,42.3 662.5,40 795,40 795,34.8 927.5,34.8",
  "forecast": {
    "band": "927.5,50.5 971.7,62.7 1015.8,68.4 1060,68.4 1060,72.8 1015.8,72.8 971.7,66.3 927.5,53.2",
    "mid": "927.5,51.9 971.7,64.5 1015.8,70.6 1060,70.6",
  },
  "gridX": [
    132.5,
    265,
    397.5,
    530,
    662.5,
    795,
    927.5,
  ],
  "height": 130,
  "legend": [
    {
      "color": "var(--en-nuclear)",
      "label": "JĄDROWA",
    },
    {
      "color": "var(--en-coal)",
      "label": "WĘGIEL",
    },
    {
      "color": "var(--en-gas)",
      "label": "GAZ",
    },
    {
      "color": "var(--en-wind)",
      "label": "WIATR",
    },
    {
      "color": "var(--en-pv)",
      "label": "PV",
    },
    {
      "color": "var(--en-ok)",
      "label": "MAGAZYN",
    },
    {
      "color": "var(--en-storage)",
      "label": "IMPORT",
    },
  ],
  "note": "— PRAWDA · ┄ PROGNOZA (PASMO)",
  "nowLabel": {
    "text": "TERAZ",
    "x": 933.5,
    "y": 14,
  },
  "nowX": 927.5,
  "scaleLabel": {
    "text": "100 MW",
    "x": 1052,
    "y": 14,
  },
  "scaleMw": 100,
  "width": 1060,
}
`;
